--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,12 +61,14 @@ jobs:
 
   gitleaks:
     runs-on: ubuntu-latest
+    needs: 
+      - semgrep
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v3
+        uses: gitleaks/gitleaks-action@v2
         with:
          args: "--verbose"
 
@@ -75,6 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     # if: always() -- will proceed kahit nag fail si semgrep
     needs: 
+        - gitleaks
         - semgrep
 
     steps:
