--- a/.github/workflows/aicodefix.yml
+++ b/.github/workflows/aicodefix.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: AI Code Reviewer
-        uses: your-username/ai-code-reviewer@main
+        uses: GwenM-Test/TestGH@main
